# gt-substrate-predictor

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  train.slurm
data/: Activity.csv  Substrate.csv  UGT.csv
scripts/: create_fasta_file.py  fetch_data.py  plot_classes.py  print_cluster_report.py  split_script.py
src/: train.py
src/data/: create_csv.py  data_split.py  dataset.py  preprocessing.py
src/features/: protein_emb.py  substrate_emb.py
src/models/: baselines.py  nn_model.py
src/training/: evaluation.py  train.py
src/utils/: visualization.py
