[project]
name = "gt-substrate-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-access>=2.0.3",
    "tqdm>=4.67.1",
]
